fix vertical align of button dropdowns

--- a/client/main.css
+++ b/client/main.css
@@ -2,3 +2,8 @@
   font-family: "Icons";
   src: url("/fonts/icons.woff2") format("woff2");
 }
+
+.button.dropdown {
+  display: flex !important;
+  align-items: center !important;
+}
